Fix horizontal scroll viewport

--- a/src/_grid.sass
+++ b/src/_grid.sass
@@ -1,6 +1,8 @@
 .#{$name-block}
   // Container
   margin: 0 auto
+  width: 100%
+  box-sizing: border-box
   padding: 0 $gutter + ($container-offset - $gutter)
 
   &__#{$name-element-row}
